// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiIntegrationModal.vue Should let you disable the API 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active v-dialog--persistent" style="max-width: 700px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Manage API</div>
          <div class="v-card__text">
            Enabling this will allow you to use the Ethernal API. Send the token displayed below (once activated) in a <code>token</code> GET parameter to the endpoint to authenticate yourself.
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
            <div class="v-input theme--light v-input--selection-controls v-input--switch">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" id="apiSwitch" role="switch" type="checkbox" aria-disabled="false" value="">
                    <div class="v-input--selection-controls__ripple"></div>
                    <div class="v-input--switch__track theme--light"></div>
                    <div class="v-input--switch__thumb theme--light">
                      <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                    </div>
                  </div><label for="apiSwitch" class="v-label theme--light" style="left: 0px; position: relative;">Disabled</label>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
            <div class="v-input v-input--hide-details v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined" style="display: none;">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><input id="token" readonly="readonly" type="text"></div>
                  <div class="v-input__append-inner">
                    <div class="v-input__icon v-input__icon--append"><button type="button" aria-label="append icon" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light"></button></div>
                  </div>
                </div>
              </div>
            </div> <input type="hidden" id="copyElement" value="">
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ApiIntegrationModal.vue Should let you enable the API 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active v-dialog--persistent" style="max-width: 700px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Manage API</div>
          <div class="v-card__text">
            Enabling this will allow you to use the Ethernal API. Send the token displayed below (once activated) in a <code>token</code> GET parameter to the endpoint to authenticate yourself.
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="true" id="apiSwitch" role="switch" type="checkbox" aria-disabled="false" value="">
                    <div class="v-input--selection-controls__ripple primary--text"></div>
                    <div class="v-input--switch__track theme--light primary--text"></div>
                    <div class="v-input--switch__thumb theme--light primary--text">
                      <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                    </div>
                  </div><label for="apiSwitch" class="v-label theme--light" style="left: 0px; position: relative;">Enabled</label>
                </div>
                <div class="v-messages theme--light primary--text">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
            <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined" style="">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><input id="token" readonly="readonly" type="text"></div>
                  <div class="v-input__append-inner">
                    <div class="v-input__icon v-input__icon--append"><button type="button" aria-label="append icon" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light"></button></div>
                  </div>
                </div>
              </div>
            </div> <input type="hidden" id="copyElement" value="123456abcdef">
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
